# soft

./: Cargo.toml  README.md
examples/: cube.rs  triangle.rs
soft/: Cargo.toml
soft/src/: lib.rs  macros.rs  matrix.rs
soft_macros/: Cargo.toml
soft_macros/src/: lib.rs
