[package]
name = "soft"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "triangle"
path = "../examples/triangle.rs"

[[example]]
name = "cube"
path = "../examples/cube.rs"

[dependencies]
soft_macros = { path = "../soft_macros" }

[dev-dependencies]
minifb = "0.17.0"
anyhow = "1.0.32"
